javadoc(global): add javadoc comments